--- a/examples/xarray_geo_extensions.ipynb
+++ b/examples/xarray_geo_extensions.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "    def __proj_set_crs__(self, crs_coord_name, crs):\n",
     "        self._crs = crs\n",
-    "        print(f\"changed CRS of {crs_coord_name!r}!\")\n",
+    "        print(f\"changed CRS of {crs_coord_name!r} in GeoAccessor!\")\n",
     "\n",
     "        return self._obj\n"
    ]
@@ -108,14 +108,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "changed CRS of 'spatial_ref'!\n"
+      "changed CRS of 'spatial_ref' in GeoAccessor!\n"
      ]
     }
    ],
    "source": [
-    "# initialize the CRS via `.proj.set_crs()`\n",
+    "# initialize the CRS via `.proj.assign_crs()`\n",
     "\n",
-    "ds_wgs84 = ds.proj.set_crs(spatial_ref=pyproj.CRS.from_user_input(\"epsg:4326\"))"
+    "ds_wgs84 = ds.proj.assign_crs(spatial_ref=pyproj.CRS.from_user_input(\"epsg:4326\"))"
    ]
   },
   {
@@ -504,7 +504,7 @@
        "Data variables:\n",
        "    *empty*\n",
        "Indexes:\n",
-       "    spatial_ref  CRSIndex (crs=EPSG:4326)</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-558dd374-8241-45ab-8089-6878b0ea2b88' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-558dd374-8241-45ab-8089-6878b0ea2b88' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-3eb01b85-f141-4fe5-930b-37801a426054' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3eb01b85-f141-4fe5-930b-37801a426054' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>spatial_ref</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0</div><input id='attrs-c41cfc38-5f8c-414b-b81e-8db36371cc13' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c41cfc38-5f8c-414b-b81e-8db36371cc13' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-317f8f34-2552-4b1a-8fb0-834312ac66b0' class='xr-var-data-in' type='checkbox'><label for='data-317f8f34-2552-4b1a-8fb0-834312ac66b0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(0)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-72d7c702-a165-47e1-9c26-4c84fa2cb64b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-72d7c702-a165-47e1-9c26-4c84fa2cb64b' class='xr-section-summary'  title='Expand/collapse section'>Data variables: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-cb53443d-f4d1-4227-907c-51afa85e00f4' class='xr-section-summary-in' type='checkbox'  checked><label for='section-cb53443d-f4d1-4227-907c-51afa85e00f4' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>spatial_ref</div></div><div class='xr-index-preview'>CRSIndex (crs=EPSG:4326)</div><input type='checkbox' disabled/><label></label><input id='index-7eedfd37-44fc-4b89-b059-be97a528024e' class='xr-index-data-in' type='checkbox'/><label for='index-7eedfd37-44fc-4b89-b059-be97a528024e' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>CRSIndex\n",
+       "    spatial_ref  CRSIndex (crs=EPSG:4326)</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-95b7f340-ac2b-48c9-a1fb-d2f74f3971c7' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-95b7f340-ac2b-48c9-a1fb-d2f74f3971c7' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-42354882-01ff-486f-a4e4-3369f222b489' class='xr-section-summary-in' type='checkbox'  checked><label for='section-42354882-01ff-486f-a4e4-3369f222b489' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>spatial_ref</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0</div><input id='attrs-9dd10d48-f778-486a-a478-66695619a878' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-9dd10d48-f778-486a-a478-66695619a878' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-346a797b-e39c-4971-b20e-911d9dc19d6e' class='xr-var-data-in' type='checkbox'><label for='data-346a797b-e39c-4971-b20e-911d9dc19d6e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(0)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-61f5e0bb-ceea-4e61-9b99-4683098b3743' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-61f5e0bb-ceea-4e61-9b99-4683098b3743' class='xr-section-summary'  title='Expand/collapse section'>Data variables: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-3f5f4ee7-d18c-4819-ba13-aa6dcbf8c991' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3f5f4ee7-d18c-4819-ba13-aa6dcbf8c991' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>spatial_ref</div></div><div class='xr-index-preview'>CRSIndex (crs=EPSG:4326)</div><input type='checkbox' disabled/><label></label><input id='index-f0b49dc9-7ea3-4ded-824e-7d9e255f84f7' class='xr-index-data-in' type='checkbox'/><label for='index-f0b49dc9-7ea3-4ded-824e-7d9e255f84f7' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>CRSIndex\n",
        "&lt;Geographic 2D CRS: EPSG:4326&gt;\n",
        "Name: WGS 84\n",
        "Axis Info [ellipsoidal]:\n",
@@ -516,7 +516,7 @@
        "Datum: World Geodetic System 1984 ensemble\n",
        "- Ellipsoid: WGS 84\n",
        "- Prime Meridian: Greenwich\n",
-       "</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-190e5426-3935-4d14-94aa-a01a748970d1' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-190e5426-3935-4d14-94aa-a01a748970d1' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-2ed870de-4ab9-4a5f-badb-93c44e7b4932' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-2ed870de-4ab9-4a5f-badb-93c44e7b4932' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.Dataset> Size: 8B\n",
