--- a/examples/xarray_geo_extensions.ipynb
+++ b/examples/xarray_geo_extensions.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## CRS-aware Xarray accessor\n",
     "\n",
-    "Here below is a basic example of a custom Xarray Dataset accessor that is also explictly registered as a \"geo\" accessor via the `xproj.register_geoaccessor` class decorator. Important note: the latter must be applied after (on top of) the Xarray register decorators.\n",
+    "Here below is a basic example of a custom Xarray Dataset accessor that is also explictly registered as a \"geo\" accessor via the `xproj.register_accessor` class decorator. Important note: the latter must be applied after (on top of) the Xarray register decorators.\n",
     "\n",
     "Registering this \"geo\" accessor allows executing custom logic from within the accessor (via the CRS interface) when calling `xproj` API."
    ]
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@xproj.register_geoaccessor\n",
+    "@xproj.register_accessor\n",
     "@xr.register_dataset_accessor(\"geo\")\n",
     "class GeoAccessor:\n",
     "\n",
